added websocket4net submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/ayls/websocket4net.git
 [submodule ".\\Reference\\websocket4net"]
 	path = .\\Reference\\websocket4net
-	url = https://github.com/ayls/websocket4net
+	url = https://github.com/ayls/websocket4net.git
