--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".\\Reference\\websocket4net"]
 	path = .\\Reference\\websocket4net
 	url = https://github.com/ayls/websocket4net.git
+[submodule "Reference/socket.clientengine"]
+	path = Reference/socket.clientengine
+	url = https://github.com/ayls/supersocket.clientengine.git
